1.00

    - TT template files changed - update them if you use a local copy.
      Template file 'label_tag' renamed to 'label_element' - old file can
      be deleted. 'field' file changed. New 'errors' file.
    
    - auto_container_error_class(), auto_container_per_error_class(),
      auto_error_class() no longer have default values.
      See "RESTORING LEGACY HTML CLASSES" in HTML::FormFu docs to restore
      previous behaviour.
    
    - Bug fix: param_value() form method now matches documented behaviour -
      returns undef when field has errors. (Reported by Hailin Hu).
    
    - New Element::Email and Element::URL HTML5 input fields.
    
    - Role::Element::Input has new datalist_options(), datalist_values(),
      datalist_id() and auto_datalist_id() methods to support HTML5 datalists.
      auto_datalist_id() is an inherited accessor which can be set on the 
      Form, MultiForm, or Block.
    
    - Form and Elements has new title() attribute short-cut.
    
    - Constraint::Regex has new anchored() accessor.
    
    - New Input attribute accessors: placeholder(), pattern(), autocomplete().
    
    - New Input boolean attribute accessors: autofocus(), multiple(), required().
    
    - New Field inherited accessors: auto_container_per_error_class(),
      auto_error_container_class(), auto_error_container_per_error_class(),
      error_tag(), error_container_tag
    
    - Constraints have new experimental method fetch_error_message().
    
    - All field elements have new method error_filename().
    
    - default_args() now supports 'Block', 'Field', 'Input' pseudo-elements,
      '|' alternatives, and '+' and '-' ancestor modifiers.
    
    - New Czech (cs) I18N translation by Jan Grmela.
    
    - mk_inherited_accessors() now also creates a *_no_inherit() method.
    
    - Experimental new roles() form method.
    
    - form methods start(), end() now respect render_method - no longer
      force use of tt templates.
    