@@ -12,11 +12,11 @@ $form->load_config_file('t-aggregate/elements/checkbox_reverse.yml');
 
 my $form_xhtml = <<EOF;
 <form action="" method="post">
-<div class="checkbox label">
+<div class="checkbox">
 <label>Foo</label>
 <input name="foo" type="checkbox" value="1" />
 </div>
-<div class="checkbox label">
+<div class="checkbox">
 <input name="bar" type="checkbox" value="1" />
 <label>Bar</label>
 </div>
