@@ -24,14 +24,14 @@ my $field2
 my $multi2 = $form->element('Multi')->label('My Multi 2');
 $multi2->element('Text')->name('bar2')->label('My Bar 2')->reverse_single(1);
 
-my $field1_xhtml = qq{<div class="text label">
+my $field1_xhtml = qq{<div class="text">
 <input name="foo1" type="text" />
 <label>My Foo 1</label>
 </div>};
 
 is( "$field1", $field1_xhtml, 'reverse_single normal' );
 
-my $multi1_xhtml = qq{<div class="multi label">
+my $multi1_xhtml = qq{<div class="multi">
 <label>My Multi 1</label>
 <span class="elements">
 <input name="bar1" type="text" />
@@ -41,14 +41,14 @@ my $multi1_xhtml = qq{<div class="multi label">
 
 is( "$multi1", $multi1_xhtml, 'reverse_multi normal' );
 
-my $field2_xhtml = qq{<div class="text label">
+my $field2_xhtml = qq{<div class="text">
 <label>My Foo 2</label>
 <input name="foo2" type="text" />
 </div>};
 
 is( "$field2", $field2_xhtml, 'reverse_multi outside multi' );
 
-my $multi2_xhtml = qq{<div class="multi label">
+my $multi2_xhtml = qq{<div class="multi">
 <label>My Multi 2</label>
 <span class="elements">
 <label>My Bar 2</label>
