@@ -14,7 +14,7 @@ my $form = HTML::FormFu->new( {
 $form->element('Text')->name('foo')->label_loc('test_label')
     ->comment_loc('test_comment')->default_loc('test_default_value');
 
-my $xhtml = qq{<div class="text comment label">
+my $xhtml = qq{<div class="text comment">
 <label>My Label</label>
 <input name="foo" type="text" value="My Default" />
 <span class="comment">
